WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306873
Fix failing WPT streams/transferable/readable-stream.html subtests
https://bugs.webkit.org/show_bug.cgi?id=306873
Summary
Fix failing WPT streams/transferable/readable-stream.html subtests
youenn fablet
Reported
2026-02-03 07:39:33 PST
Fix failing WPT streams/transferable/readable-stream.html subtests
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-03 07:39:44 PST
<
rdar://problem/169533462
>
youenn fablet
Comment 2
2026-02-03 07:46:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57785
EWS
Comment 3
2026-02-05 16:31:46 PST
Committed
306911@main
(43f9966cb6fe): <
https://commits.webkit.org/306911@main
> Reviewed commits have been landed. Closing PR #57785 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug