Source/WebCore/bindings/js/InternalWritableStreamWriter.cpp
@@ -69,22 +69,6 @@ ExceptionOr<Ref<InternalWritableStreamWriter>> acquireWritableStreamDefaultWrite
     return InternalWritableStreamWriter::create(globalObject, *result.returnValue().toObject(&globalObject));
 }
 
-int writableStreamDefaultWriterGetDesiredSize(InternalWritableStreamWriter& writer)
-{
-    auto* globalObject = writer.globalObject();
-    if (!globalObject)
-        return 0;
-
-    auto* clientData = downcast<JSVMClientData>(globalObject->vm().clientData);
-    auto& privateName = clientData->builtinFunctions().writableStreamInternalsBuiltins().writableStreamDefaultWriterGetDesiredSizePrivateName();
-
-    JSC::MarkedArgumentBuffer arguments;
-    arguments.append(writer.guardedObject());
-
-    auto result = invokeWritableStreamWriterFunction(*globalObject, privateName, arguments);
-    return result.returnValue().toNumber(globalObject);
-}
-
 RefPtr<DOMPromise> writableStreamDefaultWriterCloseWithErrorPropagation(InternalWritableStreamWriter& writer)
 {
     auto* globalObject = writer.globalObject();
@@ -203,8 +187,29 @@ void InternalWritableStreamWriter::onClosedPromiseResolution(Function<void()>&& 
     });
 }
 
+static int writableStreamDefaultWriterGetDesiredSize(InternalWritableStreamWriter& writer)
+{
+    auto* globalObject = writer.globalObject();
+    if (!globalObject)
+        return 0;
+
+    auto* clientData = downcast<JSVMClientData>(globalObject->vm().clientData);
+    auto& privateName = clientData->builtinFunctions().writableStreamInternalsBuiltins().writableStreamDefaultWriterGetDesiredSizePrivateName();
+
+    JSC::MarkedArgumentBuffer arguments;
+    arguments.append(writer.guardedObject());
+
+    auto result = invokeWritableStreamWriterFunction(*globalObject, privateName, arguments);
+    return result.returnValue().toNumber(globalObject);
+}
+
 void InternalWritableStreamWriter::whenReady(Function<void (bool)>&& callback)
 {
+    if (writableStreamDefaultWriterGetDesiredSize(*this) > 0) {
+        callback(true);
+        return;
+    }
+
     auto* globalObject = this->globalObject();
     if (!globalObject)
         return;
